# anvil-workspaces

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cliff.toml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/anvil/: __init__.py  classify.py  clean.py  cli.py  create.py  exceptions.py  git.py  main.py  manifest.py  models.py  naming.py  prompts.py  run.py
tests/: conftest.py  test_add.py  test_classify.py  test_clean.py  test_cli.py  test_create.py  test_manifest.py  test_naming.py  test_run.py
