[project]
name = "anvil-workspaces"
dynamic = ["version"]
description = "Create isolated multi-repository workspaces for engineering tasks"
readme = "README.md"
authors = [
    { name = "Felix Scherz", email = "felixwscherz@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
]

[project.scripts]
anvil = "anvil.main:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/anvil/_version.py"

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "ty>=0.0.1a14",
  "pre-commit>=3.8",
  "hatch-vcs>=0.4",
  "git-cliff>=2",
]

[tool.ruff]
target-version = "py311"

